# Limited8086Machine

./: .gitignore  CMakeLists.txt  build.bat  premake5.lua  project.4coder  run.bat  sim8086.cpp
data/: StackTest  StackTest.asm  StackTest01  StackTest01.asm
source/: Limited86Machine.rdi  build.bat  build_.bat  clean.bat  run.bat  sim8086.cpp  sim8086.h  sim8086_types.h  sim86_decode.cpp  sim86_decode.h  sim86_instruction_table.inl  sim86_memory.cpp  sim86_memory.h  sim86_text.cpp  sim86_text.h  stack.cpp  stack.h
